fixtures/frontend/milestone-2/invalid/overapplied-type-constructor/main.aivi
type Broken = (Option Text Text)
